cambiamos el titulo en el backend #2

--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -1,4 +1,5 @@
 easy_admin:
-   entities:
-      Articulos:
-        class: App\Entity\Articulos
+  site_name: 'Sistema de gestión'
+  entities:
+    Articulos:
+      class: App\Entity\Articulos
