--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -8,10 +8,7 @@ easy_admin:
         title: 'Agregar/editar %%entity_label%%'
         fields:
           - { type: 'group' }
-          - { property: 'codigo1', columns: 3, label: 'Código 1', type_options: { required: false } }
-          - { property: 'codigo2', columns: 3, label: 'Código 2', type_options: { required: false } }
-          - { property: 'codigo3', columns: 3, label: 'Código 3', type_options: { required: false } }
-          - { property: 'codigo4', columns: 3, label: 'Código 4', type_options: { required: false } }
+          - { property: 'codigo', columns: 3, label: 'Código', type_options: { required: false } }
           - { type: 'group' }
           - { property: 'idCategoria', columns: 6, label: 'Categoría', type_options: { required: false } }
           - { property: 'idMarca', columns: 6, label: 'Marca', type_options: { required: false } }
@@ -19,12 +16,7 @@ easy_admin:
           - { property: 'serie', columns: 6, label: 'Serie', type_options: { required: false } }
           - { type: 'group' }
           - { property: 'nombre', label: 'Nombre', type_options: { required: true } }
-          - { property: 'url', label: 'URL', type_options: { required: false } }
           - { property: 'descripcion', columns: 4, label: 'Descripción', type_options: { required: false } }
-          - { property: 'descripcion2', columns: 8, label: 'Descripción larga', type_options: { required: false } }
-          - { property: 'destacado', columns: 4, label: 'Destacado', type_options: { required: false } }
-          - { property: 'web', columns: 4, label: 'Publicar', type_options: { required: false } }
-          - { property: 'garantia', columns: 4, label: 'Garantía', type_options: { required: false } }
           - { property: 'idProveedor', label: 'Proveedor', type_options: { required: false } }
           - { property: 'fechaCreado', format: 'd/m/Y H:i:s' }
           - { property: 'fechaPrecio', format: 'd/m/Y H:i:s' }
@@ -33,7 +25,8 @@ easy_admin:
       list:
         title: "%%entity_label%% más recientes"
         fields:
-          - { property: 'idArticulo', label: 'Cód.' }
+          #- { property: 'idArticulo', label: 'Cód.' }
+          - { property: 'codigo1', label: 'Código' }
           - { property: 'nombre', label: 'Nombre' }
           - { property: 'costo', label: 'Costo' }
           - { property: 'pvp', label: 'PVP' }
@@ -41,4 +34,15 @@ easy_admin:
           - { property: 'stockMinimo', label: 'Stock Mín' }
           - { property: 'pedido', label: 'Pedidos' }
           - { property: 'apedir', label: 'A Pedir' }
-          - { property: 'codigo1', label: 'Código 1' }
+    
+    ArticulosCategorias:
+      class: App\Entity\ArticulosCategorias
+      label: 'Categorías'
+    
+    Marcas:
+      class: App\Entity\Marcas
+      label: 'Marcas'
+    
+    Personas:
+      class: App\Entity\Personas
+      label: 'Personas'
