--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -1,48 +1,2 @@
-easy_admin:
-  site_name: 'Sistema de gestión'
-  entities:
-    Articulos:
-      class: App\Entity\Articulos
-      label: 'Artículos'
-      form:
-        title: 'Agregar/editar %%entity_label%%'
-        fields:
-          - { type: 'group' }
-          - { property: 'codigo', columns: 3, label: 'Código', type_options: { required: false } }
-          - { type: 'group' }
-          - { property: 'idCategoria', columns: 6, label: 'Categoría', type_options: { required: false } }
-          - { property: 'idMarca', columns: 6, label: 'Marca', type_options: { required: false } }
-          - { property: 'modelo', columns: 6, label: 'Modelo', type_options: { required: false } }
-          - { property: 'serie', columns: 6, label: 'Serie', type_options: { required: false } }
-          - { type: 'group' }
-          - { property: 'nombre', label: 'Nombre', type_options: { required: true } }
-          - { property: 'descripcion', columns: 4, label: 'Descripción', type_options: { required: false } }
-          - { property: 'idProveedor', label: 'Proveedor', type_options: { required: false } }
-          - { property: 'fechaCreado', format: 'd/m/Y H:i:s' }
-          - { property: 'fechaPrecio', format: 'd/m/Y H:i:s' }
-      search:
-        fields: ['idArticulo', 'nombre']
-      list:
-        title: "%%entity_label%% más recientes"
-        fields:
-          #- { property: 'idArticulo', label: 'Cód.' }
-          - { property: 'codigo1', label: 'Código' }
-          - { property: 'nombre', label: 'Nombre' }
-          - { property: 'costo', label: 'Costo' }
-          - { property: 'pvp', label: 'PVP' }
-          - { property: 'stockActual', label: 'Stock Act' }
-          - { property: 'stockMinimo', label: 'Stock Mín' }
-          - { property: 'pedido', label: 'Pedidos' }
-          - { property: 'apedir', label: 'A Pedir' }
-    
-    ArticulosCategorias:
-      class: App\Entity\ArticulosCategorias
-      label: 'Categorías'
-    
-    Marcas:
-      class: App\Entity\Marcas
-      label: 'Marcas'
-    
-    Personas:
-      class: App\Entity\Personas
-      label: 'Personas'
+imports:
+  - { resource: easy_admin/ }
